--- a/style.css
+++ b/style.css
@@ -1,4 +1,217 @@
 * {
 	margin: 0;
 	padding: 0;
+	font-family: "Roboto", sans-serif;
+	/* border: 1px solid red; */
+}
+html,
+body {
+	height: 100%;
+}
+h1,
+h2,
+h3 {
+	font-weight: bold;
+}
+.top-container {
+	height: 100%;
+	display: grid;
+	grid-template-areas:
+		"nav header"
+		"nav main";
+	grid-template-columns: 220px minmax(400px, auto);
+	grid-template-rows: 140px auto;
+}
+p {
+	color: #555555;
+}
+
+nav {
+	grid-area: nav;
+	background-color: #1992d4;
+	padding-left: 10px;
+	color: white;
+}
+nav > * {
+	margin: 20px 10px 50px;
+}
+nav li {
+	list-style: none;
+	font-size: 18px;
+	
+	font-weight: bold;
+	margin: 12px 0;
+}
+nav li img.icon {
+	position: relative;
+	top: 8px;
+	margin-right: 15px;
+}
+nav li a {
+	color: white;
+	text-decoration: none;
+}
+
+header {
+	grid-area: header;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 20px;
+}
+header p {
+	color: black;
+	font-weight: bold;
+}
+header .first-row {
+	display: flex; 
+	justify-content: space-between;
+	margin: 0 10px;
+}
+header .first-row input#search {
+	width: 200px);
+	height: 24px;
+	border-radius: 10px;
+	border: none;
+	background-color: #e2e8f0;
+}
+.icon[alt=Search] {
+	position: relative;
+	top: 10px;
+}
+header .first-row .right {
+	display: flex; 
+	width: 160px;
+	justify-self: end;
+	justify-content: space-between;
+	align-items: center;
+}
+header .second-row {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 0 10px;
+}
+header .second-row .left .avatar {
+	width: 50px;
+	height: 50px;
+}
+header .second-row .left {
+	width: 220px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	font-size: 14px;
+}
+header .second-row .username {
+	font-size: 16px;
+}
+header .second-row .right {
+	display: flex;
+	width: 260px;
+	justify-content: space-between;
+}
+header .second-row button {
+	border-radius: 18px;
+	padding: 8px 20px;
+	border: none;
+	color: white;
+	background-color: #1992d4;
+	font-weight: bold;
+}
+
+main {
+	display: grid;
+	grid-template-columns: 3fr 1fr;
+	background-color: #e2e8f0;
+	gap: 20px;
+	padding: 20px;
+}
+h2 {
+	font-size: 20px;
+	margin-bottom: 20px;
+}
+h3 {
+	font-size: 18px;
+}
+
+section.projects {
+}
+.projects-container {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+	gap: 20px;
+}
+.project {
+	background-color: white;
+	border-left: 7px solid #f0b326;
+	border-radius: 8px;
+	padding: 20px;
+	box-shadow: 1px 4px 4px #cccccc;
+}
+.project p {
+	margin: 16px 0;
+}
+.project .buttons {
+	display: flex;
+	justify-content: end;
+	margin-top: 20px;
+}
+
+aside {
+}
+.announcements {
+	margin-bottom: 30px;
+}
+.announcements-container {
+	display: flex;
+	flex-direction: column;
+	background-color: white;
+	border-radius: 8px;
+	box-shadow: 1px 4px 4px #cccccc;
+}
+.announcement {
+	margin: 15px;
+}
+.announcement h3 {
+	font-size: 16px;
+	margin-bottom: 10px;
+}
+.trends-container {
+	display: flex;
+	flex-direction: column;
+	background-color: white;
+	padding: 15px;
+	border-radius: 8px;
+	box-shadow: 1px 4px 4px #cccccc;
+}
+.trend {
+	display: flex;
+	align-items: center;
+	margin: 10px;
+}
+.trend-text {
+	margin-left: 16px;
+}
+.trend h3 {
+	margin-bottom: 4px;
+}
+
+img.icon {
+	width: 25px;
+}
+img.icon#dashboard {
+	width: 40px;
+	position: relative;
+	top: 12px;
+	left: -6px;
+}
+nav img {
+	width: 40px;
+	height: auto;
+}
+img.avatar {
+	border-radius: 50%;
+	width: 40px;
+	height: 40px;
 }
